src/test/deca/context/valid/if-else.deca
// Description:
//    Programme minimaliste valide syntaxiement mais pas lors de la generation de code
//
// Resultats:
//erreur
//
//
// Historique:
//    cree le 07/01/2025

{   
   if(3==4){
        int x =3;
   }

   return x; 
}